// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-0 {
  display: inline-block;
  font-size: 0.875rem;
  opacity: 0;
  position: absolute;
  margin: 0;
  width: 1rem;
  height: 1rem;
  z-index: 1;
  cursor: pointer;
}

.emotion-0:focus + label {
  outline: none;
  border: 2px solid #2E75D4;
  box-shadow: 0px 0px 0px 3px #84B9F5;
}

.emotion-0:checked + label {
  border-color: #2E75D4;
  background: #2E75D4;
}

.emotion-0:disabled + label {
  border-color: #c3cfd5;
  background: #c3cfd5;
}

.emotion-0:checked + label,
.emotion-0:indeterminate + label {
  border-color: #2E75D4;
  background: #2E75D4;
}

.emotion-0:checked:disabled + label svg,
.emotion-0:indeterminate:disabled + label svg {
  fill: #6B7888;
}

.emotion-0:disabled + label {
  border-color: #c3cfd5;
  background: #c3cfd5;
}

.emotion-0:disabled + label svg {
  fill: #c3cfd5;
}

.emotion-2 {
  background: #ffffff;
  width: 1rem;
  height: 1rem;
  border: 2px solid #c3cfd5;
  fill: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  border-radius: 20%;
}

.emotion-2 svg {
  width: 0.75rem;
  min-width: 0.75rem;
  min-height: 0.75rem;
  height: 0.75rem;
}

.emotion-3 {
  display: inline-block;
  position: relative;
  text-overflow: ellipsis;
  line-height: 1.5rem;
  margin: 0;
  width: 1rem;
  height: 1rem;
  min-height: 1rem;
  overflow: visible;
  margin-right: 0.5rem;
  margin-top: 0.25rem;
}

.emotion-1 {
  display: inline-block;
  fill: #ffffff;
  height: 24px;
  width: 24px;
}

.emotion-4 {
  display: inline-block;
  color: #192532;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
  margin-bottom: 0;
}

<div
  class="emotion-5"
  data-test-id="cf-ui-controlled-input-field"
>
  <div
    class="emotion-3"
    data-test-id="cf-ui-controlled-input"
  >
    <input
      aria-label="label text"
      class="emotion-0"
      id="checkbox"
      type="checkbox"
      value=""
    />
    <label
      class="emotion-2"
      for="checkbox"
    >
      <svg
        class="emotion-1"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
        />
      </svg>
    </label>
  </div>
  <div>
    <label
      class="emotion-4"
      data-test-id="cf-ui-form-label"
      for="checkbox"
    >
      label text
    </label>
  </div>
</div>
`;

exports[`renders the component as checked 1`] = `
.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-0 {
  display: inline-block;
  font-size: 0.875rem;
  opacity: 0;
  position: absolute;
  margin: 0;
  width: 1rem;
  height: 1rem;
  z-index: 1;
  cursor: pointer;
}

.emotion-0:focus + label {
  outline: none;
  border: 2px solid #2E75D4;
  box-shadow: 0px 0px 0px 3px #84B9F5;
}

.emotion-0:checked + label {
  border-color: #2E75D4;
  background: #2E75D4;
}

.emotion-0:disabled + label {
  border-color: #c3cfd5;
  background: #c3cfd5;
}

.emotion-0:checked + label,
.emotion-0:indeterminate + label {
  border-color: #2E75D4;
  background: #2E75D4;
}

.emotion-0:checked:disabled + label svg,
.emotion-0:indeterminate:disabled + label svg {
  fill: #6B7888;
}

.emotion-0:disabled + label {
  border-color: #c3cfd5;
  background: #c3cfd5;
}

.emotion-0:disabled + label svg {
  fill: #c3cfd5;
}

.emotion-2 {
  background: #ffffff;
  width: 1rem;
  height: 1rem;
  border: 2px solid #c3cfd5;
  fill: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  border-radius: 20%;
}

.emotion-2 svg {
  width: 0.75rem;
  min-width: 0.75rem;
  min-height: 0.75rem;
  height: 0.75rem;
}

.emotion-3 {
  display: inline-block;
  position: relative;
  text-overflow: ellipsis;
  line-height: 1.5rem;
  margin: 0;
  width: 1rem;
  height: 1rem;
  min-height: 1rem;
  overflow: visible;
  margin-right: 0.5rem;
  margin-top: 0.25rem;
}

.emotion-1 {
  display: inline-block;
  fill: #ffffff;
  height: 24px;
  width: 24px;
}

.emotion-4 {
  display: inline-block;
  color: #192532;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
  margin-bottom: 0;
}

<div
  class="emotion-5 my-extra-class"
  data-test-id="cf-ui-controlled-input-field"
>
  <div
    class="emotion-3"
    data-test-id="cf-ui-controlled-input"
  >
    <input
      aria-label="Label Text"
      checked=""
      class="emotion-0"
      id="checkbox"
      type="checkbox"
      value=""
    />
    <label
      class="emotion-2"
      for="checkbox"
    >
      <svg
        class="emotion-1"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
        />
      </svg>
    </label>
  </div>
  <div>
    <label
      class="emotion-4"
      data-test-id="cf-ui-form-label"
      for="checkbox"
    >
      Label Text
    </label>
  </div>
</div>
`;

exports[`renders the component as required 1`] = `
.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-0 {
  display: inline-block;
  font-size: 0.875rem;
  opacity: 0;
  position: absolute;
  margin: 0;
  width: 1rem;
  height: 1rem;
  z-index: 1;
  cursor: pointer;
}

.emotion-0:focus + label {
  outline: none;
  border: 2px solid #2E75D4;
  box-shadow: 0px 0px 0px 3px #84B9F5;
}

.emotion-0:checked + label {
  border-color: #2E75D4;
  background: #2E75D4;
}

.emotion-0:disabled + label {
  border-color: #c3cfd5;
  background: #c3cfd5;
}

.emotion-0:checked + label,
.emotion-0:indeterminate + label {
  border-color: #2E75D4;
  background: #2E75D4;
}

.emotion-0:checked:disabled + label svg,
.emotion-0:indeterminate:disabled + label svg {
  fill: #6B7888;
}

.emotion-0:disabled + label {
  border-color: #c3cfd5;
  background: #c3cfd5;
}

.emotion-0:disabled + label svg {
  fill: #c3cfd5;
}

.emotion-2 {
  background: #ffffff;
  width: 1rem;
  height: 1rem;
  border: 2px solid #c3cfd5;
  fill: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  border-radius: 20%;
}

.emotion-2 svg {
  width: 0.75rem;
  min-width: 0.75rem;
  min-height: 0.75rem;
  height: 0.75rem;
}

.emotion-3 {
  display: inline-block;
  position: relative;
  text-overflow: ellipsis;
  line-height: 1.5rem;
  margin: 0;
  width: 1rem;
  height: 1rem;
  min-height: 1rem;
  overflow: visible;
  margin-right: 0.5rem;
  margin-top: 0.25rem;
}

.emotion-1 {
  display: inline-block;
  fill: #ffffff;
  height: 24px;
  width: 24px;
}

.emotion-5 {
  display: inline-block;
  color: #192532;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
  margin-bottom: 0;
}

.emotion-4 {
  color: #6B7888;
  font-weight: 400;
  margin-left: calc(1rem * (4 / 16));
}

<div
  class="emotion-6 my-extra-class"
  data-test-id="cf-ui-controlled-input-field"
>
  <div
    class="emotion-3"
    data-test-id="cf-ui-controlled-input"
  >
    <input
      aria-label="Label Text"
      class="emotion-0"
      id="checkbox"
      required=""
      type="checkbox"
      value=""
    />
    <label
      class="emotion-2"
      for="checkbox"
    >
      <svg
        class="emotion-1"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
        />
      </svg>
    </label>
  </div>
  <div>
    <label
      class="emotion-5"
      data-test-id="cf-ui-form-label"
      for="checkbox"
    >
      Label Text
      <span
        class="emotion-4"
      >
        (
        required
        )
      </span>
    </label>
  </div>
</div>
`;

exports[`renders the component in a disabled state 1`] = `
.emotion-2 {
  background: #ffffff;
  width: 1rem;
  height: 1rem;
  border: 2px solid #c3cfd5;
  fill: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  border-radius: 20%;
}

.emotion-2 svg {
  width: 0.75rem;
  min-width: 0.75rem;
  min-height: 0.75rem;
  height: 0.75rem;
}

.emotion-3 {
  display: inline-block;
  position: relative;
  text-overflow: ellipsis;
  line-height: 1.5rem;
  margin: 0;
  width: 1rem;
  height: 1rem;
  min-height: 1rem;
  overflow: visible;
  margin-right: 0.5rem;
  margin-top: 0.25rem;
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  opacity: 0.7;
  cursor: not-allowed;
}

.emotion-0 {
  display: inline-block;
  font-size: 0.875rem;
  opacity: 0;
  position: absolute;
  margin: 0;
  width: 1rem;
  height: 1rem;
  z-index: 1;
  cursor: pointer;
  cursor: not-allowed;
}

.emotion-0:focus + label {
  outline: none;
  border: 2px solid #2E75D4;
  box-shadow: 0px 0px 0px 3px #84B9F5;
}

.emotion-0:checked + label {
  border-color: #2E75D4;
  background: #2E75D4;
}

.emotion-0:disabled + label {
  border-color: #c3cfd5;
  background: #c3cfd5;
}

.emotion-0:checked + label,
.emotion-0:indeterminate + label {
  border-color: #2E75D4;
  background: #2E75D4;
}

.emotion-0:checked:disabled + label svg,
.emotion-0:indeterminate:disabled + label svg {
  fill: #6B7888;
}

.emotion-0:disabled + label {
  border-color: #c3cfd5;
  background: #c3cfd5;
}

.emotion-0:disabled + label svg {
  fill: #c3cfd5;
}

.emotion-1 {
  display: inline-block;
  fill: #192532;
  height: 24px;
  width: 24px;
}

.emotion-4 {
  display: inline-block;
  color: #192532;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
  margin-bottom: 0;
  opacity: 0.7;
  cursor: not-allowed;
}

<div
  class="my-extra-class emotion-5"
  data-test-id="cf-ui-controlled-input-field"
>
  <div
    class="emotion-3"
    data-test-id="cf-ui-controlled-input"
  >
    <input
      aria-label="Label Text"
      class="emotion-0"
      disabled=""
      id="checkbox"
      type="checkbox"
      value=""
    />
    <label
      class="emotion-2"
      for="checkbox"
    >
      <svg
        class="emotion-1"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
        />
      </svg>
    </label>
  </div>
  <div>
    <label
      class="emotion-4"
      data-test-id="cf-ui-form-label"
      for="checkbox"
    >
      Label Text
    </label>
  </div>
</div>
`;

exports[`renders the component with a help text 1`] = `
.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-0 {
  display: inline-block;
  font-size: 0.875rem;
  opacity: 0;
  position: absolute;
  margin: 0;
  width: 1rem;
  height: 1rem;
  z-index: 1;
  cursor: pointer;
}

.emotion-0:focus + label {
  outline: none;
  border: 2px solid #2E75D4;
  box-shadow: 0px 0px 0px 3px #84B9F5;
}

.emotion-0:checked + label {
  border-color: #2E75D4;
  background: #2E75D4;
}

.emotion-0:disabled + label {
  border-color: #c3cfd5;
  background: #c3cfd5;
}

.emotion-0:checked + label,
.emotion-0:indeterminate + label {
  border-color: #2E75D4;
  background: #2E75D4;
}

.emotion-0:checked:disabled + label svg,
.emotion-0:indeterminate:disabled + label svg {
  fill: #6B7888;
}

.emotion-0:disabled + label {
  border-color: #c3cfd5;
  background: #c3cfd5;
}

.emotion-0:disabled + label svg {
  fill: #c3cfd5;
}

.emotion-2 {
  background: #ffffff;
  width: 1rem;
  height: 1rem;
  border: 2px solid #c3cfd5;
  fill: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  border-radius: 20%;
}

.emotion-2 svg {
  width: 0.75rem;
  min-width: 0.75rem;
  min-height: 0.75rem;
  height: 0.75rem;
}

.emotion-3 {
  display: inline-block;
  position: relative;
  text-overflow: ellipsis;
  line-height: 1.5rem;
  margin: 0;
  width: 1rem;
  height: 1rem;
  min-height: 1rem;
  overflow: visible;
  margin-right: 0.5rem;
  margin-top: 0.25rem;
}

.emotion-1 {
  display: inline-block;
  fill: #ffffff;
  height: 24px;
  width: 24px;
}

.emotion-4 {
  display: inline-block;
  color: #192532;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
  margin-bottom: 0;
}

.emotion-5 {
  display: block;
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  color: #606C7C;
  font-size: 0.875rem;
  line-height: 1.5;
  text-rendering: optimizeLegibility;
}

<div
  class="emotion-6 my-extra-class"
  data-test-id="cf-ui-controlled-input-field"
>
  <div
    class="emotion-3"
    data-test-id="cf-ui-controlled-input"
  >
    <input
      aria-label="Label Text"
      class="emotion-0"
      id="checkbox"
      type="checkbox"
      value=""
    />
    <label
      class="emotion-2"
      for="checkbox"
    >
      <svg
        class="emotion-1"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
        />
      </svg>
    </label>
  </div>
  <div>
    <label
      class="emotion-4"
      data-test-id="cf-ui-form-label"
      for="checkbox"
    >
      Label Text
    </label>
    <p
      class="emotion-5"
      data-test-id="cf-ui-help-text"
    >
      Help Text
    </p>
  </div>
</div>
`;

exports[`renders the component with a light label variation 1`] = `
.emotion-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-0 {
  display: inline-block;
  font-size: 0.875rem;
  opacity: 0;
  position: absolute;
  margin: 0;
  width: 1rem;
  height: 1rem;
  z-index: 1;
  cursor: pointer;
}

.emotion-0:focus + label {
  outline: none;
  border: 2px solid #2E75D4;
  box-shadow: 0px 0px 0px 3px #84B9F5;
}

.emotion-0:checked + label {
  border-color: #2E75D4;
  background: #2E75D4;
}

.emotion-0:disabled + label {
  border-color: #c3cfd5;
  background: #c3cfd5;
}

.emotion-0:checked + label,
.emotion-0:indeterminate + label {
  border-color: #2E75D4;
  background: #2E75D4;
}

.emotion-0:checked:disabled + label svg,
.emotion-0:indeterminate:disabled + label svg {
  fill: #6B7888;
}

.emotion-0:disabled + label {
  border-color: #c3cfd5;
  background: #c3cfd5;
}

.emotion-0:disabled + label svg {
  fill: #c3cfd5;
}

.emotion-2 {
  background: #ffffff;
  width: 1rem;
  height: 1rem;
  border: 2px solid #c3cfd5;
  fill: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  border-radius: 20%;
}

.emotion-2 svg {
  width: 0.75rem;
  min-width: 0.75rem;
  min-height: 0.75rem;
  height: 0.75rem;
}

.emotion-3 {
  display: inline-block;
  position: relative;
  text-overflow: ellipsis;
  line-height: 1.5rem;
  margin: 0;
  width: 1rem;
  height: 1rem;
  min-height: 1rem;
  overflow: visible;
  margin-right: 0.5rem;
  margin-top: 0.25rem;
}

.emotion-1 {
  display: inline-block;
  fill: #ffffff;
  height: 24px;
  width: 24px;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5 {
  display: inline-block;
  fill: #BF3045;
  height: 18px;
  width: 18px;
  margin-right: 0.25rem;
  margin-top: calc(0.25rem / 2);
  min-height: 18px;
  min-width: 18px;
}

.emotion-6 {
  display: block;
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #192532;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
  font-weight: 400;
  color: #536171;
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: #BF3045;
  margin: 0;
}

.emotion-4 {
  display: inline-block;
  color: #192532;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
  margin-bottom: 0;
  font-weight: 400;
}

<div
  class="emotion-8 my-extra-class"
  data-test-id="cf-ui-controlled-input-field"
>
  <div
    class="emotion-3"
    data-test-id="cf-ui-controlled-input"
  >
    <input
      aria-label="Label Text"
      class="emotion-0"
      id="checkbox"
      type="checkbox"
      value=""
    />
    <label
      class="emotion-2"
      for="checkbox"
    >
      <svg
        class="emotion-1"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
        />
      </svg>
    </label>
  </div>
  <div>
    <label
      class="emotion-4"
      data-test-id="cf-ui-form-label"
      for="checkbox"
    >
      Label Text
    </label>
    <div
      class="emotion-7"
      data-test-id="cf-ui-validation-message"
    >
      <svg
        class="emotion-5"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <p
        class="emotion-6"
        data-test-id="cf-ui-paragraph"
      >
        Not valid!
      </p>
    </div>
  </div>
</div>
`;

exports[`renders the component with a validation message 1`] = `
.emotion-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-0 {
  display: inline-block;
  font-size: 0.875rem;
  opacity: 0;
  position: absolute;
  margin: 0;
  width: 1rem;
  height: 1rem;
  z-index: 1;
  cursor: pointer;
}

.emotion-0:focus + label {
  outline: none;
  border: 2px solid #2E75D4;
  box-shadow: 0px 0px 0px 3px #84B9F5;
}

.emotion-0:checked + label {
  border-color: #2E75D4;
  background: #2E75D4;
}

.emotion-0:disabled + label {
  border-color: #c3cfd5;
  background: #c3cfd5;
}

.emotion-0:checked + label,
.emotion-0:indeterminate + label {
  border-color: #2E75D4;
  background: #2E75D4;
}

.emotion-0:checked:disabled + label svg,
.emotion-0:indeterminate:disabled + label svg {
  fill: #6B7888;
}

.emotion-0:disabled + label {
  border-color: #c3cfd5;
  background: #c3cfd5;
}

.emotion-0:disabled + label svg {
  fill: #c3cfd5;
}

.emotion-2 {
  background: #ffffff;
  width: 1rem;
  height: 1rem;
  border: 2px solid #c3cfd5;
  fill: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  border-radius: 20%;
}

.emotion-2 svg {
  width: 0.75rem;
  min-width: 0.75rem;
  min-height: 0.75rem;
  height: 0.75rem;
}

.emotion-3 {
  display: inline-block;
  position: relative;
  text-overflow: ellipsis;
  line-height: 1.5rem;
  margin: 0;
  width: 1rem;
  height: 1rem;
  min-height: 1rem;
  overflow: visible;
  margin-right: 0.5rem;
  margin-top: 0.25rem;
}

.emotion-1 {
  display: inline-block;
  fill: #ffffff;
  height: 24px;
  width: 24px;
}

.emotion-4 {
  display: inline-block;
  color: #192532;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
  margin-bottom: 0;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5 {
  display: inline-block;
  fill: #BF3045;
  height: 18px;
  width: 18px;
  margin-right: 0.25rem;
  margin-top: calc(0.25rem / 2);
  min-height: 18px;
  min-width: 18px;
}

.emotion-6 {
  display: block;
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #192532;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
  font-weight: 400;
  color: #536171;
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: #BF3045;
  margin: 0;
}

<div
  class="emotion-8 my-extra-class"
  data-test-id="cf-ui-controlled-input-field"
>
  <div
    class="emotion-3"
    data-test-id="cf-ui-controlled-input"
  >
    <input
      aria-label="Label Text"
      class="emotion-0"
      id="checkbox"
      type="checkbox"
      value=""
    />
    <label
      class="emotion-2"
      for="checkbox"
    >
      <svg
        class="emotion-1"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
        />
      </svg>
    </label>
  </div>
  <div>
    <label
      class="emotion-4"
      data-test-id="cf-ui-form-label"
      for="checkbox"
    >
      Label Text
    </label>
    <div
      class="emotion-7"
      data-test-id="cf-ui-validation-message"
    >
      <svg
        class="emotion-5"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <p
        class="emotion-6"
        data-test-id="cf-ui-paragraph"
      >
        Not valid!
      </p>
    </div>
  </div>
</div>
`;

exports[`renders the component with a value 1`] = `
.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-0 {
  display: inline-block;
  font-size: 0.875rem;
  opacity: 0;
  position: absolute;
  margin: 0;
  width: 1rem;
  height: 1rem;
  z-index: 1;
  cursor: pointer;
}

.emotion-0:focus + label {
  outline: none;
  border: 2px solid #2E75D4;
  box-shadow: 0px 0px 0px 3px #84B9F5;
}

.emotion-0:checked + label {
  border-color: #2E75D4;
  background: #2E75D4;
}

.emotion-0:disabled + label {
  border-color: #c3cfd5;
  background: #c3cfd5;
}

.emotion-0:checked + label,
.emotion-0:indeterminate + label {
  border-color: #2E75D4;
  background: #2E75D4;
}

.emotion-0:checked:disabled + label svg,
.emotion-0:indeterminate:disabled + label svg {
  fill: #6B7888;
}

.emotion-0:disabled + label {
  border-color: #c3cfd5;
  background: #c3cfd5;
}

.emotion-0:disabled + label svg {
  fill: #c3cfd5;
}

.emotion-2 {
  background: #ffffff;
  width: 1rem;
  height: 1rem;
  border: 2px solid #c3cfd5;
  fill: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  border-radius: 20%;
}

.emotion-2 svg {
  width: 0.75rem;
  min-width: 0.75rem;
  min-height: 0.75rem;
  height: 0.75rem;
}

.emotion-3 {
  display: inline-block;
  position: relative;
  text-overflow: ellipsis;
  line-height: 1.5rem;
  margin: 0;
  width: 1rem;
  height: 1rem;
  min-height: 1rem;
  overflow: visible;
  margin-right: 0.5rem;
  margin-top: 0.25rem;
}

.emotion-1 {
  display: inline-block;
  fill: #ffffff;
  height: 24px;
  width: 24px;
}

.emotion-4 {
  display: inline-block;
  color: #192532;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
  margin-bottom: 0;
}

<div
  class="emotion-5 my-extra-class"
  data-test-id="cf-ui-controlled-input-field"
>
  <div
    class="emotion-3"
    data-test-id="cf-ui-controlled-input"
  >
    <input
      aria-label="Label Text"
      class="emotion-0"
      id="checkbox"
      type="checkbox"
      value="someValue"
    />
    <label
      class="emotion-2"
      for="checkbox"
    >
      <svg
        class="emotion-1"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
        />
      </svg>
    </label>
  </div>
  <div>
    <label
      class="emotion-4"
      data-test-id="cf-ui-form-label"
      for="checkbox"
    >
      Label Text
    </label>
  </div>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-0 {
  display: inline-block;
  font-size: 0.875rem;
  opacity: 0;
  position: absolute;
  margin: 0;
  width: 1rem;
  height: 1rem;
  z-index: 1;
  cursor: pointer;
}

.emotion-0:focus + label {
  outline: none;
  border: 2px solid #2E75D4;
  box-shadow: 0px 0px 0px 3px #84B9F5;
}

.emotion-0:checked + label {
  border-color: #2E75D4;
  background: #2E75D4;
}

.emotion-0:disabled + label {
  border-color: #c3cfd5;
  background: #c3cfd5;
}

.emotion-0:checked + label,
.emotion-0:indeterminate + label {
  border-color: #2E75D4;
  background: #2E75D4;
}

.emotion-0:checked:disabled + label svg,
.emotion-0:indeterminate:disabled + label svg {
  fill: #6B7888;
}

.emotion-0:disabled + label {
  border-color: #c3cfd5;
  background: #c3cfd5;
}

.emotion-0:disabled + label svg {
  fill: #c3cfd5;
}

.emotion-2 {
  background: #ffffff;
  width: 1rem;
  height: 1rem;
  border: 2px solid #c3cfd5;
  fill: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  border-radius: 20%;
}

.emotion-2 svg {
  width: 0.75rem;
  min-width: 0.75rem;
  min-height: 0.75rem;
  height: 0.75rem;
}

.emotion-3 {
  display: inline-block;
  position: relative;
  text-overflow: ellipsis;
  line-height: 1.5rem;
  margin: 0;
  width: 1rem;
  height: 1rem;
  min-height: 1rem;
  overflow: visible;
  margin-right: 0.5rem;
  margin-top: 0.25rem;
}

.emotion-1 {
  display: inline-block;
  fill: #ffffff;
  height: 24px;
  width: 24px;
}

.emotion-4 {
  display: inline-block;
  color: #192532;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
  margin-bottom: 0;
}

<div
  class="emotion-5 my-extra-class"
  data-test-id="cf-ui-controlled-input-field"
>
  <div
    class="emotion-3"
    data-test-id="cf-ui-controlled-input"
  >
    <input
      aria-label="Label Text"
      class="emotion-0"
      id="checkbox"
      type="checkbox"
      value=""
    />
    <label
      class="emotion-2"
      for="checkbox"
    >
      <svg
        class="emotion-1"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
        />
      </svg>
    </label>
  </div>
  <div>
    <label
      class="emotion-4"
      data-test-id="cf-ui-form-label"
      for="checkbox"
    >
      Label Text
    </label>
  </div>
</div>
`;
